# pydofus3

./: .gitignore  ACKNOWLEDGEMENTS.md  README.md  docker-compose.yml  pyproject.toml
pydofus3/: binaryReader.py  config.py  enum_data.py  tools.py
pydofus3/catalog/: __init__.py  main.py
pydofus3/catalog/binary/: CatalogBinaryReader.py  ContentCatalogDataBinary.py  ContentCatalogDataBinaryHeader.py
pydofus3/catalog/catalog/: ClassJsonObject.py  ContentCatalogData.py  ObjectInitializationData.py  ResourceLocation.py  SerializedObjectDecoder.py  SerializedType.py  WrappedSerializedObject.py  __init__.py
pydofus3/catalog/classes/: AssetBundleRequestOptions.py  __init__.py
pydofus3/catalog/json/: ContentCatalogDataJson.py  __init__.py
pydofus3/cli/: data_extract.py  main.py
pydofus3/db_dump/: conf.json  config.py  dump_to_bdd.py  process.py
pydofus3/extractor/: config.py  i18n.py  open_api_schema.py  ornament.py  version.py
pydofus3/extractor/audio/: audio.py
pydofus3/extractor/audio/salt/: Salt.Convert.deps.json
pydofus3/extractor/data/: __init__.py  cache.py  config.py  loader.py  main.py  stub_typetree.py  tools.py
pydofus3/extractor/data/typetree/: bunlde_typetree.py  stub_typetree.py
pydofus3/extractor/dump_cs/: config.json  main.py
pydofus3/extractor/dump_cs/redux/: CodeGen.deps.json  Il2CppInspector.deps.json
pydofus3/extractor/dump_cs/templates/: api.py.jinja  datacenter.py.jinja
pydofus3/extractor/proto/: protodec.py
pydofus3/extractor/proto/protodec/: protodec.deps.json
pydofus3/not_generated/: base.py  i18n.py  unity.py
