[project]
name = "pydofus3"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = '>=3.14'
dependencies = [
    "fastapi[standard]>=0.136.1",
    "moviepy>=2.2.1",
    "numpy>=2.4.4",
    "orjson>=3.11.8",
    "pandas>=3.0.2",
    "proto-schema-parser>=2.1.0",
    "psycopg>=3.3.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
    "unitypy>=1.25.0",
]

[project.scripts]
pydofus3 = "pydofus3.cli.main:app"

[project.optional-dependencies]
fpng = [
    "fpng-py @ git+https://github.com/K0lb3/fpng_py.git@a826a55f682cead912d05eb0bad52f857b4bc726",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pydofus3"
module-root = ""

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[dependency-groups]
dev = [
    "polars>=1.40.1",
]
