[project]
name = "pydofus3"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = '>=3.14'
dependencies = [
    "fastapi[standard]>=0.136.3",
    "moviepy>=2.2.1",
    "numpy>=2.4.6",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "proto-schema-parser>=2.1.0",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "tqdm>=4.67.3",
    "typer>=0.26.6",
    "unitypy>=1.25.0",
]

[project.scripts]
pydofus3 = "pydofus3.cli.main:app"

[project.optional-dependencies]
fpng = [
    "fpng-py @ git+https://github.com/K0lb3/fpng_py.git@a826a55f682cead912d05eb0bad52f857b4bc726",
]

[tool.uv]
exclude-newer = "3 days"

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pydofus3"
module-root = ""

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[dependency-groups]
dev = [
    "polars>=1.41.2",
]
